convolution layer forward and backward

--- a/assignment2/Dropout.ipynb
+++ b/assignment2/Dropout.ipynb
@@ -407,7 +407,7 @@
    "metadata": {},
    "source": [
     "# Answer\n",
-    "I see the train accuracy of dropout with p=0.75 is lower than that of p=0.0, the validate accuracy of dropout with p=0.75 is higher than that of p=0.0. It is easily to conclude that dropout can "
+    "I see the train accuracy of dropout with p=0.75 is lower than that of p=0.0, the validate accuracy of dropout with p=0.75 is higher than that of p=0.0. It is easily to conclude that dropout can make the model more fit to validation data, which the model will not overfit for the training data."
    ]
   }
  ],
